--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!--<Button-->
-        <!--android:id="@+id/gasBtn"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Gas"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--android:layout_marginBottom="10dp"-->
-        <!--android:layout_marginStart="10dp"-->
+    <com.example.apple.speedometr.customview.CursorView
+        android:id="@+id/cursor"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        <!--/>-->
+    <Button
+        android:id="@+id/gasBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/accelerate"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="@dimen/button_margin_bottom"
+        android:layout_marginStart="@dimen/button_margin_start"
+
+        />
 
 </android.support.constraint.ConstraintLayout>
